@@ -1,5 +1,10 @@
 2008-02-18  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed find next selection
+	  update.
+
+2008-02-18  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
 	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
 	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
